data/all_generated_tests/raw_wast_tests/loop_InvalidorInconsistentControlFlowGraph_819.wast
;; 10. **Loop with Function Call Stack Imbalance**:     Create a loop containing function calls that unbalance the expected function call stack, potentially disrupting CFG.     Constraint: Ensure the function call stack is correctly managed within loops, maintaining overall CFG.     Expected: Proper error handling to prevent stack imbalance resulting from function calls inside loops.

(assert_invalid
  (module
    (type $sig (func))
    (func $imbalance (result i32)
      (loop (result i32)
        (call $sig)
        (i32.const 0)
      )
    )
  )
  "stack mismatch"
)